Fix truncated screen

--- a/static/css/other.css
+++ b/static/css/other.css
@@ -77,8 +77,8 @@ table.type06 .even {
 /*}*/
 
 img {
- width : 40vw;
-
+  width : 100%;
+  height : 100%
 }
 
 body {
@@ -133,10 +133,7 @@ body {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  -moz-justify-content: center;
-  -webkit-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
+
   background-color: #000;
   padding: 6em 4em 4em 4em;}
   body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -351,7 +348,7 @@ h1 {
   top: 80px;
   font-size: 2.5em;
   line-height: 1.25em;
-  padding: 600px 1px 1px 1px;}
+  padding: 1px 1px 1px 1px;}
 
 h2 {
   font-size: 1.75em;
